Fix page overflow properties in IE/Firefox

--- a/templates/default/fulldoc/html/css/style.css
+++ b/templates/default/fulldoc/html/css/style.css
@@ -6,8 +6,6 @@ body {
   font-family: "Lucida Sans", "Lucida Grande", Verdana, Arial, sans-serif;
   font-size: 13px;
   width: 100%;
-  height: 100%;
-  overflow: hidden;
   margin: 0;
   padding: 0;
   display: flex;
@@ -49,22 +47,20 @@ body {
   flex: 5 1;
   -webkit-flex: 5 1;
   -ms-flex: 5 1;
-  height: 100%;
   outline: none;
   position: relative;
   background: #fff;
-  overflow: auto;
   padding: 1.2em;
   padding-top: 0.2em;
 }
 
 @media (max-width: 920px) {
   .nav_wrap { display: none; }
-  body { height: initial; display: block; overflow: auto; }
-  #main { height: initial; }
 }
 
 @media (min-width: 920px) {
+  body { height: 100%; overflow: hidden; }
+  #main { height: 100%; overflow: auto; }
   #search { display: none; }
   #search_frame { display: none; }
 }
